--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="actions mt-2">
-      <%= f.submit "Войти", class: "btn btn-primary" %>
+      <%= f.submit "Зарегистрироваться", class: "btn btn-primary" %>
     </div>
   <% end %>
   <%= render "devise/shared/links" %>
