--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Тут будут meetings</h1>
+<h1 class="mb-4">События</h1>
+
+<% if user_signed_in? %>
+  <%= link_to "Создать событие", new_meeting_path, class: "btn btn-success" %>
+<% end %>
