meetings create new add, views update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,9 @@
       </div>
     </nav>
 
-    <div class ="container mx-5">
+    <div class ="mx-5">
     <%= render 'layouts/unavailable_request' %>
+    <%= render 'layouts/successful action' %>
       <%= yield %> 
     </div>
 
