--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,5 +1,18 @@
 <h1 class="mb-4">События</h1>
 
 <% if user_signed_in? %>
-  <%= link_to "Создать событие", new_meeting_path, class: "btn btn-success" %>
+  <%= link_to "Создать событие", new_meeting_path, class: "btn btn-success mb-3" %>
 <% end %>
+
+<div class="row">
+  <% @meeting.each do |m| %>
+    <div class="container-md col-lg-3 col-xl-2 col-height mx-3 my-4">
+      <div style="background-image: url(<%= image_path "meet" %>)" class="event-background"></div>
+      <div class="card-body event-description dimming">
+        <h5><%= link_to m.name, meeting_path(m.id) %></h5>
+        <h6><%= l m.date, format: :short %><h6>
+        <h6><%= m.place %><h6>
+      </div>
+    </div>
+  <% end %>
+</div>
