--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,19 +6,24 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "mb-2 form-control w-25" %>
+        <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", placeholder: "Никнейм", class: "mb-2 form-control w-75" %>
+      </div>
+
+
+      <div class="field">
+        <%= f.email_field :email, autocomplete: "email", placeholder: "Email", class: "mb-2 form-control w-75" %>
       </div>
 
       <div class="field">
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Пароль (6 символов минимум)", class: "mb-2 form-control w-25" %>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Пароль (6 символов минимум)", class: "mb-2 form-control w-75" %>
       </div>
 
       <div class="field">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Потдверждение пароля", class: "form-control w-25" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Потдверждение пароля", class: "form-control w-75" %>
       </div>
 
       <div class="actions mt-2">
-        <%= f.submit "Зарегистрироваться", class: "btn btn-primary w-25" %>
+        <%= f.submit "Зарегистрироваться", class: "btn btn-primary w-75" %>
       </div>
     <% end %>
     <%= render "devise/shared/links" %>
