meeting visual update

--- a/app/assets/stylesheets/meeting.css
+++ b/app/assets/stylesheets/meeting.css
@@ -29,3 +29,9 @@
 .event-description a {
   color: #e8e8fa;
 }
+.event-description h6 {
+  color: #e8e8fa;
+}
+.event-description {
+  color: #2929ff;
+}
