--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,9 @@
-<h1>User: <%= @user.email %></h1>
-<%= image_tag "user.png", size: "160x160" %>
+<div class="mt-3 w-100 d-flex flex-column justify-content-center align-items-center">
+  <h1><%= @user.nickname %></h1>
+  <%= image_tag "user.png", size: "160x160" %>
+</div>
+
+<div class="d-flex flex-row justify-content-center align-items-center mt-5 mb-5">
+      <%= link_to "Редактировать профиль", edit_user_path(@user), class: "btn btn-outline-success mr-3" %>
+      <%= button_to "Удалить профиль", user_path(@user), class: "btn btn-outline-danger", method: :delete %>
+  </div>
