--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,3 +3,9 @@
   *= require meeting
   *= require user
 */
+@media screen and (max-width: 330px){
+  html{
+      width: 330px;
+      overflow: auto;
+  }
+}
