--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if resource.errors.any? %>
   <div class="alert alert-danger alert-dismissible">
-    <%= I18n.t("my.error",
+    <%= t("my.error",
                count: resource.errors.count,
                resource: resource.class.model_name.human)
     %>
