--- a/app/views/meetings/_text_content.html.erb
+++ b/app/views/meetings/_text_content.html.erb
@@ -1,5 +1,5 @@
-<div class="card-body event-description dimming col-height">
-  <h4><%= link_to m.name, meeting_path(m.id) %></h5>
-  <h4><%= l m.date, format: :long %><h6>
+<div class="event-description dimming col-height">
+  <h4><%= link_to m.name, meeting_path(m.id) %></h4>
+  <h5><%= l m.date, format: :long %><h5>
   <h6><%= m.place %><h6>
 </div>
