--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Создание события</h1>
+<h1><%= t("my.meetings.new.title")%></h1>
 <%= render "meetings/meeting_form", local_path: meetings_path, request: :post %>
