--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,17 +20,17 @@
         <ul class="navbar-nav">
           <% unless user_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "Войти", new_user_session_path, class: "nav-link" %>
+              <%= link_to t("my.sessions.new.title"), new_user_session_path, class: "nav-link" %>
             </li>
             <li class="nav-item active">
-              <%= link_to "Зарегистрироваться", new_user_registration_path, class: "nav-link" %>
+              <%= link_to t("my.registrations.new.title"), new_user_registration_path, class: "nav-link" %>
             </li>
           <% else %>
             <li class="nav-item active">
-              <%= link_to "Мой профиль", user_path(current_user), class: "nav-link" %>
+              <%= link_to t("my.application.my_profile"), user_path(current_user), class: "nav-link" %>
             </li>
             <li class="nav-item active">
-              <%= button_to "Выйти", destroy_user_session_path, class: "nav-link bg-primary border-0", method: 'delete' %>
+              <%= button_to t("my.application.exit"), destroy_user_session_path, class: "nav-link bg-primary border-0", method: 'delete' %>
             </li>
           <% end %>
         </ul>
