--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,7 +1,7 @@
-<h1 class="mb-4">События</h1>
+<h1 class="mb-4"><%= t("my.meetings.index.title") %></h1>
 
 <% if user_signed_in? %>
-  <%= link_to "Создать событие", new_meeting_path, class: "btn btn-success mb-3" %>
+  <%= link_to t("my.meetings.index.create_meeting"), new_meeting_path, class: "btn btn-success mb-3" %>
 <% end %>
 
 <div class="row">
