--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -9,15 +9,15 @@
   <div class="col-md-8">
     <% if current_user == @user %>
       <div class="d-flex flex-row">
-        <%= link_to "Редактировать событие", edit_meeting_path(@meeting), class: "btn btn-success mr-3" %>
-        <%= button_to "Удалить событие", meeting_path(@meeting), class: "btn btn-danger", method: :delete %>
+        <%= link_to t("my.meetings.show.edit"), edit_meeting_path(@meeting), class: "btn btn-success mr-3" %>
+        <%= button_to t("my.meetings.show.delete"), meeting_path(@meeting), class: "btn btn-danger", method: :delete %>
       </div>
     <% end %>
   </div>
   <div class="col-md-4">
     <div>
-      <h3>Создатель: <%= link_to @user.nickname, user_path(@user), class: "btn btn-primary" %></h3>
+      <h3><%= t("my.meetings.show.creator") %>: <%= link_to @user.nickname, user_path(@user), class: "btn btn-primary" %></h3>
     </div>
-    <h3>Пойдут:</h3>
+    <h3><%= t("my.meetings.show.invited") %>:</h3>
   </div>
 </div>
