--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 <% if current_user == @user %>
   <div class="d-flex flex-row justify-content-center align-items-center mt-5 mb-5">
     <%= link_to t("my.users.show.edit"), edit_user_path(@user), class: "btn btn-outline-success mr-3" %>
-    <%= button_to t("my.users.show.delete"), user_path(@user), class: "btn btn-outline-danger", method: :delete %>
+    <%= button_to t("my.users.show.delete"), user_path(@user), class: "btn btn-outline-danger", method: :delete, form: { data: { 'turbo-confirm': t("my.users.show.delete_confirm") } } %>
   </div>
 <% end %>
 
