--- a/app/views/meetings/_meeting_form.html.erb
+++ b/app/views/meetings/_meeting_form.html.erb
@@ -9,6 +9,6 @@
 
   <%= form.text_area :description, placeholder: t("activerecord.attributes.meeting.description"), class: "mb-2 form-control w-75" %>
 
-  <%= form.submit t("my.meetings.meeting_form.submit"), class: "btn btn-primary w-75" %>
+  <%= form.submit t("my.meetings.meeting_form.submit"), class: "btn btn-primary w-75 mb-3" %>
 
 <% end %>
