--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,2 +1,3 @@
 <h1><%= t("my.meetings.edit.title") %></h1>
 <%= render "meetings/meeting_form", local_path: meeting_path, request: :patch %>
+<%= link_to t("my.meetings.edit.back"), @meeting %>
