--- a/app/views/meetings/_text_content.html.erb
+++ b/app/views/meetings/_text_content.html.erb
@@ -1,4 +1,4 @@
-<div class="event-description dimming col-height">
+<div class="event-description dimming col-height word-break">
   <h4><%= link_to m.name, meeting_path(m.id) %></h4>
   <h5><%= l m.date, format: :long %><h5>
   <h6><%= m.place %><h6>
