--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 mt-3">
       <div style="background-image: url(<%= image_path "meet.jpg" %>)" class="event-background"></div>
-      <%= render 'meetings/text_content', m: @meeting %>
+      <%= render 'meetings/text_content', meeting: @meeting %>
     </div>
 </div>
 
