--- a/app/views/layouts/_error_action_message.html.erb
+++ b/app/views/layouts/_error_action_message.html.erb
@@ -1,6 +1,6 @@
-<% unless flash[:success].nil? %>
-  <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
-    <p><%= flash[:success] %></p>
+<% if flash[:error] %>
+  <div class="alert alert-danger alert-dismissible fade show my-2" role="alert">
+    <p><%= flash[:error] %></p>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
