--- a/app/views/layouts/_meetings_list.html.erb
+++ b/app/views/layouts/_meetings_list.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <% meetings.each do |m| %>
+  <% meeting.each do |m| %>
     <div class="container-md col-md-5 col-lg-5 col-xl-3 col-height mx-3 my-3">
       <div style="background-image: url(<%= image_path "meet.jpg" %>)" class="event-background"></div>
-      <%= render 'meetings/text_content', m: m %>
+      <%= render 'meetings/text_content', meeting: m %>
     </div>
   <% end %>
 </div>
