--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,3 +1,3 @@
 <h1><%= t("my.meetings.edit.title") %></h1>
-<%= render "meetings/meeting_form", local_path: meeting_path, request: :patch %>
+<%= render "meetings/meeting_form", local_path: meeting_path, request: :patch, meeting: @meeting %>
 <%= link_to t("my.meetings.edit.back"), @meeting %>
