--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%= t("my.meetings.new.title")%></h1>
-<%= render "meetings/meeting_form", local_path: meetings_path, request: :post %>
+<%= render "meetings/meeting_form", local_path: meetings_path, request: :post, meeting: @meeting %>
 <%= link_to t("my.meetings.new.back"), root_path %>
