--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,7 @@
   *= require_self
   *= require meeting
   *= require user
+  *= require font-awesome
 */
 @media screen and (max-width: 330px){
   html{
