--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,24 +1,18 @@
 <div class="buffer-bottom mt-2 form-control">
-  <p class = "mb-1"><%= comment.body %></p>
-  <p class = "mb-1">
+  <p class="mb-1"><%= comment.body %></p>
+  <p class="mb-1">
     <span>
       <% if comment.user.present? %>
-        
         <span class="mb-1">
-          <% if request.path == user_path(user) %>
-            <%= user.name %>
-          <% else %>
-            <%= link_to user.name, user_path(user) %>
-          <% end %>
+          <%= link_to comment.user.nickname, user_path(@user) %>
         </span>
-
       <% else %>
         <em><strong><%= comment.user_name %></strong></em>
       <% end %>
     </span>
     <em><%= l comment.created_at, format: :short %></em>
     <% if current_user == @user %>
-      <%= button_to "Удалить", comment_path(comment), method: :delete, class: "btn btn-danger", method: :delete, form: { data: { 'turbo-confirm': t("my.comments.delete_confirm") } }%>
+      <%= button_to t("my.comments.delete_button"), meeting_comment_path(@meeting, comment), method: :delete, class: "btn btn-danger", method: :delete, form: { data: { 'turbo-confirm': t("my.comments.delete_confirm") } }%>
     <% end %>
   </p>
 </div>
