--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -4,4 +4,4 @@
   <%= link_to t("my.meetings.index.create_meeting"), new_meeting_path, class: "btn btn-success mb-3" %>
 <% end %>
 
-<%= render "layouts/meetings_list", meeting: @meeting %>
+<%= render "layouts/meetings_list", meetings: @meeting %>
