--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,4 +14,4 @@
     <h2 class="text-center color-gray"><%= t("my.users.show.no_meetings") %></h2>
   <% end %>
 
-<%= render "layouts/meetings_list", meeting: @user.meeting %>
+<%= render "layouts/meetings_list", meetings: @user.meeting %>
