--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12 mt-3">
+    <div class="col-12 mt-3 px-0">
       <div style="background-image: url(<%= image_path meeting_photo(@meeting) %>)" class="event-background"></div>
       <%= render 'meetings/text_content', meeting: @meeting %>
     </div>
