meeting form refactoring

--- a/app/views/meetings/_meeting_validation_error.html.erb
+++ b/app/views/meetings/_meeting_validation_error.html.erb
@@ -1,4 +1,4 @@
-<% if meeting&.errors&.any? %>
+<% if meeting.errors.any? %>
   <div class="alert alert-danger alert-dismissible">
     <%= t("my.error",
                count: meeting.errors.count,
