meeting mailer update

--- a/app/views/meeting_mailer/comment.text.erb
+++ b/app/views/meeting_mailer/comment.text.erb
@@ -3,7 +3,7 @@
 
 <%= @comment.body %>
 
-<%= t '.author' %>: <%= @comment&.user&.nickname || @comment.user_name %>
+<%= t '.author' %>: <%= @comment.user&.nickname || @comment.user_name %>
 
 --------------------------------
 <%= t '.meeting' %>: <%= @meeting.name %>
