--- a/app/views/meeting_mailer/comment.html.erb
+++ b/app/views/meeting_mailer/comment.html.erb
@@ -1,11 +1,11 @@
 <h1><%= t '.title' %></h1>
 <p><strong><%= t '.body' %>:</strong> <%= @comment.body %></p>
-<p><%= t '.author' %>: <strong><%= @comment&.user&.nickname || @comment.user_name %></strong></p>
+<p><%= t '.author' %>: <strong><%= @comment.user&.nickname || @comment.user_name %></strong></p>
 
 <hr/>
 
-<p><strong><%= t '.meeting' %>:</strong> <%= @meeting.name %></p>
+<p><strong><%= t '.meeting' %>:</strong> <%= link_to @meeting.name, meeting_url(@meeting) %></p>
 
 <p><strong><%= t '.datetime' %>:</strong> <%= l @meeting.date, format: :long %></p>
 
-<p><strong><%= t '.owner' %>:</strong> <%= @meeting.user.nickname %></p>
+<p><strong><%= t '.owner' %>:</strong> <%= link_to @meeting.user.nickname, user_url(@meeting.user) %></p>
