--- a/app/views/meeting_mailer/subscription.html.erb
+++ b/app/views/meeting_mailer/subscription.html.erb
@@ -3,8 +3,8 @@
 <p><%= t '.email' %>: <strong><%= link_to @email, "mailto:#{@email}" %></strong></p>
 <hr/>
 
-<p><strong><%= t '.meeting' %>:</strong> <%= @meeting.name %></p>
+<p><strong><%= t '.meeting' %>:</strong> <%= link_to @meeting.name, meeting_url(@meeting) %></p>
 
 <p><strong><%= t '.datetime' %>:</strong> <%= l @meeting.date, format: :long %></p>
 
-<p><strong><%= t '.owner' %>:</strong> <%= @meeting.user.nickname %></p>
+<p><strong><%= t '.owner' %>:</strong> <%= link_to @meeting.user.nickname, meeting_url(@meeting.user) %></p>
