--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -2,6 +2,6 @@
   <%= link_to image_tag(photo.photo, width:"300"), photo.photo %>
   <div>
     Добавил: <%= link_to photo.user.nickname, user_path(photo.user) %> 
-    <%= button_to fa_icon("trash"), meeting_photo_path(@meeting, photo), class: "btn", method: :delete, form: { data: { 'turbo-confirm': t("my.meetings.show.photo_delete_confirm")  } } if current_user == @user || current_user == photo.user %>
+    <%= button_to fa_icon("trash"), meeting_photo_path(@meeting, photo), class: "btn", method: :delete, form: { data: { 'turbo-confirm': t("my.meetings.show.photo_delete_confirm")  } } if user_can_delete?(photo.user) %>
   </div>
 </div>
