--- a/app/views/meetings/_meeting_form_edit.html.erb
+++ b/app/views/meetings/_meeting_form_edit.html.erb
@@ -15,5 +15,5 @@
 
   <%= form.text_area :description, placeholder: t("activerecord.attributes.meeting.description"), class: "mb-2 form-control w-75" %>
 
-  <%= form.submit t("my.meetings.meeting_form.submit"), class: "btn btn-primary w-75 mb-3" %>
+  <%= form.submit t("my.meetings.edit.submit"), class: "btn btn-primary w-75 mb-3" %>
 <% end %>
