Meeting form refactoring

--- a/app/views/meetings/_meeting_form.html.erb
+++ b/app/views/meetings/_meeting_form.html.erb
@@ -1,6 +1,5 @@
-<%= render "meetings/meeting_validation_error", meeting: meeting %>
 <%= form_with model: meeting, url: local_path, method: request, data: {turbo: false} do |form| %>
-  <%= form.text_field :name, placeholder: t("activerecord.attributes.meeting.name"), value: meeting.name, class: "mb-2 form-control w-75" %>
+  <%= form.text_field :name, placeholder: t("activerecord.attributes.meeting.name"), class: "mb-2 form-control w-75" %>
   <%= form.text_field :place, placeholder: t("activerecord.attributes.meeting.place"), class: "mb-2 form-control w-75" %>
   
   <div class ="form-control mb-2 w-75">
@@ -15,5 +14,5 @@
 
   <%= form.text_area :description, placeholder: t("activerecord.attributes.meeting.description"), class: "mb-2 form-control w-75" %>
 
-  <%= form.submit t("my.meetings.edit.submit"), class: "btn btn-primary w-75 mb-3" %>
+  <%= form.submit t("my.meetings.meeting_form.submit"), class: "btn btn-primary w-75 mb-3" %>
 <% end %>
