--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -12,5 +12,5 @@ $(function() {
 </script>
 
 <h1><%= t("my.meetings.edit.title") %></h1>
-<%= render "meetings/meeting_form_edit", local_path: meeting_path, request: :patch, meeting: @meeting %>
+<%= render "meetings/meeting_form", local_path: meeting_path, request: :patch, meeting: @meeting %>
 <%= link_to t("my.meetings.edit.back"), @meeting %>
