--- a/app/views/meetings/_meeting_form.html.erb
+++ b/app/views/meetings/_meeting_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: meeting, url: local_path, method: request, data: {turbo: false} do |form| %>
+<%= form_with model: meeting_form_params[:meeting], url: meeting_form_params[:local_path], method: meeting_form_params[:requset], data: {turbo: false} do |form| %>
   <%= form.text_field :name, placeholder: t("activerecord.attributes.meeting.name"), class: "mb-2 form-control w-75" %>
   <%= form.text_field :place, placeholder: t("activerecord.attributes.meeting.place"), class: "mb-2 form-control w-75" %>
   
